--- a/CoeusAI-Principal.ipynb
+++ b/CoeusAI-Principal.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "id": "ec6f2532-106e-4178-82d6-d982fea58b35",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6c09f142-41ae-40c4-b3e4-1bccd574e7be",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "386cbfe2-c7cb-4c10-954f-3466a484e4e3",
    "metadata": {
     "tags": []
@@ -203,16 +203,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Entidades del documento 0 : Ficheros_Represores_Martinez_Adame_Arturo_Martinez_Adame_Arturo-31-.JPG han sido procesadas.\n",
-      "Entidades del documento 1 : Ficheros_ACNR_militantes_Olea_Castaneyra_Rafel_Olea_Castaneyra_Rafael,_ACNR-19-.JPG han sido procesadas.\n",
-      "Entidades del documento 2 : Ficheros_Detenidos_Desaparecidos_Perez_Lopez_Martha_Perez_Lopez_Martha-21-.JPG han sido procesadas.\n",
-      "Entidades del documento 3 : Ficheros_Detenidos_Desaparecidos_Morales_Lopez_Delia_Morales_Lopez_Delia-23-.JPG han sido procesadas.\n",
-      "Entidades del documento 4 : Ficheros_Union_Campesina_Independiente,_fichas_UCI,_fichas-2-.JPG han sido procesadas.\n",
-      "Entidades del documento 5 : Ficheros_Brigada_Campesina_de_Ajusticiamiento_BCA_Brigada_Campesina_de_Ajusticiamiento-79-.JPG han sido procesadas.\n",
-      "Entidades del documento 6 : Ficheros_UAG_73-10-29_a_73-12-07_UAG,_fichas-134-.JPG han sido procesadas.\n",
-      "Entidades del documento 7 : Ficheros_FAR,_concentrado_general_FAR,_concentrado_general-157-.JPG han sido procesadas.\n",
-      "Entidades del documento 8 : Ficheros_UAG_76-11-16_a_77-03-19_UAG,_fichas-113-.JPG han sido procesadas.\n",
-      "Entidades del documento 9 : Ficheros_PPUA_Fichas_PPUA,_Fichas-98-.JPG han sido procesadas.\n"
+      "Entidades del documento 1 : Ficheros_Represores_Martinez_Adame_Arturo_Martinez_Adame_Arturo-31-.JPG han sido procesadas.\n",
+      "Entidades del documento 2 : Ficheros_ACNR_militantes_Olea_Castaneyra_Rafel_Olea_Castaneyra_Rafael,_ACNR-19-.JPG han sido procesadas.\n",
+      "Entidades del documento 3 : Ficheros_Detenidos_Desaparecidos_Perez_Lopez_Martha_Perez_Lopez_Martha-21-.JPG han sido procesadas.\n",
+      "Entidades del documento 4 : Ficheros_Detenidos_Desaparecidos_Morales_Lopez_Delia_Morales_Lopez_Delia-23-.JPG han sido procesadas.\n",
+      "Entidades del documento 5 : Ficheros_Union_Campesina_Independiente,_fichas_UCI,_fichas-2-.JPG han sido procesadas.\n",
+      "Entidades del documento 6 : Ficheros_Brigada_Campesina_de_Ajusticiamiento_BCA_Brigada_Campesina_de_Ajusticiamiento-79-.JPG han sido procesadas.\n",
+      "Entidades del documento 7 : Ficheros_UAG_73-10-29_a_73-12-07_UAG,_fichas-134-.JPG han sido procesadas.\n",
+      "Entidades del documento 8 : Ficheros_FAR,_concentrado_general_FAR,_concentrado_general-157-.JPG han sido procesadas.\n",
+      "Entidades del documento 9 : Ficheros_UAG_76-11-16_a_77-03-19_UAG,_fichas-113-.JPG han sido procesadas.\n",
+      "Entidades del documento 10 : Ficheros_PPUA_Fichas_PPUA,_Fichas-98-.JPG han sido procesadas.\n"
      ]
     }
    ],
@@ -266,20 +266,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0065073a-9192-4174-8775-af4890c5b1d6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'Datos/EjemplosEntregable/predictions_entities.json'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_616616/3019244151.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcoeus\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson_to_csv_2a\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjson_to_csv_2b\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mjson_to_csv_2a\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Datos/EjemplosEntregable/predictions_entities.json\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Datos/EjemplosEntregable/2A.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mjson_to_csv_2b\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Datos/EjemplosEntregable/predictions_entities.json\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Datos/EjemplosEntregable/2B.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/venvs/CoeusAI/Coeus-AI/coeus.py\u001b[0m in \u001b[0;36mjson_to_csv_2a\u001b[0;34m(path_to_json, path_to_2a)\u001b[0m\n\u001b[1;32m    616\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mjson_to_csv_2a\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_to_json\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath_to_2a\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    617\u001b[0m     \u001b[0;31m# Se carga el archivo JSON\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 618\u001b[0;31m     \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_to_json\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    619\u001b[0m     \u001b[0mpredictions_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    620\u001b[0m     \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'Datos/EjemplosEntregable/predictions_entities.json'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2A: Documento Ficheros_Represores_Martinez_Adame_Arturo_Martinez_Adame_Arturo-31-.JPG procesado.\n",
+      "2A: Documento Ficheros_ACNR_militantes_Olea_Castaneyra_Rafel_Olea_Castaneyra_Rafael,_ACNR-19-.JPG procesado.\n",
+      "2A: Documento Ficheros_Detenidos_Desaparecidos_Perez_Lopez_Martha_Perez_Lopez_Martha-21-.JPG procesado.\n",
+      "2A: Documento Ficheros_Detenidos_Desaparecidos_Morales_Lopez_Delia_Morales_Lopez_Delia-23-.JPG procesado.\n",
+      "2A: Documento Ficheros_Union_Campesina_Independiente,_fichas_UCI,_fichas-2-.JPG procesado.\n",
+      "2A: Documento Ficheros_Brigada_Campesina_de_Ajusticiamiento_BCA_Brigada_Campesina_de_Ajusticiamiento-79-.JPG procesado.\n",
+      "2A: Documento Ficheros_UAG_73-10-29_a_73-12-07_UAG,_fichas-134-.JPG procesado.\n",
+      "2A: Documento Ficheros_FAR,_concentrado_general_FAR,_concentrado_general-157-.JPG procesado.\n",
+      "2A: Documento Ficheros_UAG_76-11-16_a_77-03-19_UAG,_fichas-113-.JPG procesado.\n",
+      "2A: Documento Ficheros_PPUA_Fichas_PPUA,_Fichas-98-.JPG procesado.\n",
+      "2B: Documento Ficheros_Represores_Martinez_Adame_Arturo_Martinez_Adame_Arturo-31-.JPG procesado.\n",
+      "2B: Documento Ficheros_ACNR_militantes_Olea_Castaneyra_Rafel_Olea_Castaneyra_Rafael,_ACNR-19-.JPG procesado.\n",
+      "2B: Documento Ficheros_Detenidos_Desaparecidos_Perez_Lopez_Martha_Perez_Lopez_Martha-21-.JPG procesado.\n",
+      "2B: Documento Ficheros_Detenidos_Desaparecidos_Morales_Lopez_Delia_Morales_Lopez_Delia-23-.JPG procesado.\n",
+      "2B: Documento Ficheros_Union_Campesina_Independiente,_fichas_UCI,_fichas-2-.JPG procesado.\n",
+      "2B: Documento Ficheros_Brigada_Campesina_de_Ajusticiamiento_BCA_Brigada_Campesina_de_Ajusticiamiento-79-.JPG procesado.\n",
+      "2B: Documento Ficheros_UAG_73-10-29_a_73-12-07_UAG,_fichas-134-.JPG procesado.\n",
+      "2B: Documento Ficheros_FAR,_concentrado_general_FAR,_concentrado_general-157-.JPG procesado.\n",
+      "2B: Documento Ficheros_UAG_76-11-16_a_77-03-19_UAG,_fichas-113-.JPG procesado.\n",
+      "2B: Documento Ficheros_PPUA_Fichas_PPUA,_Fichas-98-.JPG procesado.\n"
      ]
     }
    ],
@@ -290,8 +304,8 @@
     "\"\"\"\n",
     "from coeus import json_to_csv_2a, json_to_csv_2b\n",
     "\n",
-    "json_to_csv_2a(\"Datos/Evaluacion/predictions_entities.json\", \"Datos/EjemplosEntregable/2A.csv\")\n",
-    "json_to_csv_2b(\"Datos/Evaluacion/predictions_entities.json\", \"Datos/EjemplosEntregable/2B.csv\")"
+    "json_to_csv_2a(\"Datos/Evaluacion/predictions_entities.json\", \"Datos/Evaluacion/2A.csv\")\n",
+    "json_to_csv_2b(\"Datos/Evaluacion/predictions_entities.json\", \"Datos/Evaluacion/2B.csv\")"
    ]
   }
  ],
